--- a/src/app/main/side-nav/customise-browse/customise-browse.component.scss
+++ b/src/app/main/side-nav/customise-browse/customise-browse.component.scss
@@ -25,6 +25,20 @@ i {
     cursor: pointer;
     font-size: 15px;
     font-family: Consolas,monaco,"Ubuntu Mono",courier,monospace!important;
+    display: flex;
+    align-items: baseline;
+
+    i {
+        display: inline-block;
+    }
+
+    span {
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        display: inline-block;
+    }
 }
 
 .customize-browse-item.selected:hover {
